fix: food spawning, game over